methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:2: error: not found: value GREEN
  faireV(GREEN)
         ^