methods.picture.MethodsPicture.scala.code
override def run() {
  faireV(GREEN)
}

def faireV(c: Color) = {
  setCouleurBrosse(c)
  baisseBrosse()
  avance()
  leveBrosse()
  
  gauche()
}